@@ -1,10 +1,15 @@
 # ChangeLog for dev-java/fesi
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-java/fesi/ChangeLog,v 1.1 2002/02/01 21:53:11 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/fesi/ChangeLog,v 1.2 2002/08/01 17:15:54 karltk Exp $
 
 *fesi-1 (1 Feb 2002)
 
-  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
+  01 Aug 2002; Karl Trygve Kalleberg <gbevin@gentoo.org> fesi-1.ebuild :
+
+  Added LICENSE, SLOT and KEYWORDS. Original ebuild submitted by 
+  Achim Gottinger <achim@gentoo.org>.
+
+  01 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
   
   Added initial ChangeLog which should be updated whenever the package is
   updated in any way. This changelog is targetted to users. This means that the
